@@ -1,5 +1,6 @@
 
 * Release 3.0.0
+	* Fixed Bug #2: Should print stack traces too
 	* Fixed Bug #7: shouldThrow should show the expected message on failure
 	* Fixed Bug #6: Add functions that run before and after tests
 	* Fixed Bug #5: Add shouldNotBeIn function
